Remove old NAb upgrade code